force-app/main/default/objects/Application_Policy_History__c/Application_Policy_History__c.object-meta.xml
<CustomObject>
    <label>Application/Policy History</label>
    <nameField>
        <displayFormat>App-{000000}</displayFormat>
        <label>Application/Policy History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application/Policy History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>