force-app/main/default/objects/Application_Policy_History__c/fields/Application_Policy__c.field-meta.xml
<CustomField>
    <fullName>Application_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application/Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>ISBAM Application/Policy History</relationshipLabel>
    <relationshipName>Application_Policy_History</relationshipName>
    <type>Lookup</type>
</CustomField>