force-app/main/default/objects/Application_Policy_History__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Policy_History</relationshipName>
    <type>Lookup</type>
</CustomField>